# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[package]
name    = "better-bucket"
version = "0.9.5"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "A genuinely better token bucket for Rust: lock-free, allocation-free acquire path, cache-aligned, overflow-safe, with a one-line Tier-1 API and a mockable clock for deterministic tests."

# Keywords (5 max)
keywords = [
    "rate-limiting",
    "token-bucket",
    "throttle",
    "lock-free",
    "backpressure"
]

# Categories
categories = [
    "concurrency",
    "algorithms",
    "no-std"
]

# Links
homepage      = "https://github.com/jamesgober/better-bucket"
repository    = "https://github.com/jamesgober/better-bucket"
documentation = "https://docs.rs/better-bucket"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
# The full functional surface is the default features (std + clock); the
# `comparison` feature is benchmark-only and must not pull `governor` into the
# docs build.
features = ["std", "clock"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "better_bucket"
path = "src/lib.rs"

# LINTS
# #################################
# `loom` is a build-time cfg toggled via `RUSTFLAGS="--cfg loom"` for the
# concurrency model-check harness; `docsrs` is set by docs.rs. Registering both
# keeps the `unexpected_cfgs` lint quiet under `-D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(loom)',
    'cfg(docsrs)',
] }



# FEATURE FLAGS
# #################################
[features]
# Default build: std on, monotonic system clock available.
default = ["std", "clock"]

# Standard library. With it off, the crate is `no_std` and the caller must
# drive time explicitly (inject ticks / a custom Clock). The lock-free core
# does not require std. Propagates std to clock-lib when that feature is on.
std = ["clock-lib?/std"]

# Pluggable clock source (clock-lib): monotonic time + a mockable clock for
# deterministic, sleep-free tests. On by default; turn off for a pure
# caller-driven-tick build.
#
# `clock` implies `std`: clock-lib's `Clock` trait (and `ManualClock`) are
# themselves std-gated, and the current single-bucket implementation uses a
# std `Mutex` for interior mutability. The lock-free, no_std-capable core
# lands in 0.3.0 and lifts the std requirement from the caller-driven path.
clock = ["std", "dep:clock-lib", "dep:error-forge"]

# Benchmark-only: pulls in `governor` for the comparative benchmark
# (`cargo bench --features comparison --bench comparison`). Never enabled in a
# normal build, so it does not affect the crate's dependency footprint or MSRV.
comparison = ["clock", "dep:governor"]



# DEPENDENCIES
# #################################
[dependencies]
# Monotonic time + a mockable clock for deterministic, sleep-free tests. The
# time source the bucket reads on the acquire path; injected so consumers
# (e.g. rate-net) and tests can substitute a ManualClock.
clock-lib = { version = "1.0", optional = true, default-features = false }

# Domain error type (config validation) via the portfolio error stack, instead
# of thiserror/anyhow in a library crate. Only the `ForgeError` trait is used;
# `BucketError` is hand-written so every variant is documented.
error-forge = { version = "1.0", optional = true }

# Benchmark-only incumbent, behind the `comparison` feature. Used solely by the
# `comparison` bench to produce the head-to-head numbers in docs/BENCHMARKS.md.
governor = { version = "0.10", optional = true }



# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"

# `loom` is pulled in only under `cfg(loom)` model-checking builds
# (`RUSTFLAGS="--cfg loom" cargo test`). It is a regular (not dev) dependency
# because the library's atomics switch to `loom::sync::atomic` under that cfg,
# so the lib crate itself ‚ÄĒ not just the test ‚ÄĒ must link it.
[target.'cfg(loom)'.dependencies]
loom = "0.7"



# BENCHMARKS
# #################################
# The bench exercises the real `Bucket`, so it needs the clock feature; under a
# bare `no_std` build it is skipped rather than failing to compile.
[[bench]]
name              = "bucket_bench"
harness           = false
required-features = ["clock"]

# Head-to-head vs `governor`. Only built with `--features comparison`.
[[bench]]
name              = "comparison"
harness           = false
required-features = ["comparison"]



# EXAMPLES
# #################################
# All examples drive a `Bucket` and so require the clock feature.
[[example]]
name              = "per_second"
required-features = ["clock"]

[[example]]
name              = "burst"
required-features = ["clock"]

[[example]]
name              = "deterministic_test"
required-features = ["clock"]

[[example]]
name              = "builder"
required-features = ["clock"]



# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
